--- a/.azuredevops/pipelines/uninstall-selfhosted-agents-helm.yml
+++ b/.azuredevops/pipelines/uninstall-selfhosted-agents-helm.yml
@@ -71,6 +71,12 @@ parameters:
   - name: useOnPremAgents
     type: boolean
     default: false # Set to true to use on-premises agents, false to use cloud agents
+  - name: windowsOnPremPoolName
+    type: string
+    default: "WindowsLatestPoolOnPrem"
+  - name: ubuntuOnPremPoolName
+    type: string
+    default: "UbuntuLatestPoolOnPrem"
 
 variables:
   - group: "ADO_az-devops-agents-k8s-002-azurelocal" # to get AZDO_PAT
@@ -86,14 +92,14 @@ stages:
         pool:
           ${{ if eq(parameters.useAzureLocal, false) }}:
             ${{ if eq(parameters.useOnPremAgents, true) }}:
-              name: UbuntuLatestPoolOnPrem
+              name: ${{ parameters.ubuntuOnPremPoolName }}
             ${{ else }}:
               vmImage: ubuntu-latest
           ${{ else }}:
             ${{ if ne(parameters.bootstrapPoolName, '') }}:
               name: ${{ parameters.bootstrapPoolName }}
             ${{ else }}:
-              name: WindowsLatestPoolOnPrem
+              name: ${{ parameters.windowsOnPremPoolName }}
         steps:
           - checkout: self
 
@@ -249,7 +255,7 @@ stages:
         condition: always()
         pool:
           ${{ if parameters.useOnPremAgents }}:
-            name: UbuntuLatestPoolOnPrem
+            name: ${{ parameters.ubuntuOnPremPoolName }}
           ${{ else }}:
             vmImage: ubuntu-latest
         steps:
