--- a/.azuredevops/pipelines/deploy-aks-hci.template.yml
+++ b/.azuredevops/pipelines/deploy-aks-hci.template.yml
@@ -37,6 +37,9 @@ parameters:
   - name: DeleteCluster
     type: boolean
     default: false
+  - name: windowsOnPremPoolName
+    type: string
+    default: "__WINDOWS_ONPREM_POOL_NAME__"
 
 variables:
   - group: "__AZURE_DEVOPS_VARIABLE_GROUP__" # to get AZDO_PAT
@@ -57,7 +60,7 @@ variables:
 
 # Use a Windows agent so we can run Windows PowerShell 5.x
 pool:
-  name: "__WINDOWS_ONPREM_POOL_NAME__"
+  name: "${{ parameters.windowsOnPremPoolName }}"
 
 stages:
   - stage: deploy
