--- a/azsh-linux-agent/Dockerfile.linux-sh-agent-docker.prebaked
+++ b/azsh-linux-agent/Dockerfile.linux-sh-agent-docker.prebaked
@@ -22,7 +22,7 @@ RUN add-apt-repository \
     stable"
 RUN apt-get update && apt-get install --no-install-recommends -y docker-ce docker-ce-cli containerd.io
 
-RUN apt update -y && apt upgrade -y && apt install curl git jq libicu74 -y
+RUN apt update -y && apt upgrade -y && apt install curl git jq libicu74 zip unzip -y
 
 # Also can be "linux-arm", "linux-arm64".
 ENV TARGETARCH="linux-x64"
