--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ windows-sh-agent-secret.yaml
 keda-secret.yaml
 config.json
 #/helm-charts-v2/az-selfhosted-agents/values.yaml
+wind/windows/
 
 # dotenv files
 .env
